@@ -24,6 +24,7 @@
 docs/INSTALL.autoconf
 include/*.h
 init/systemd/man-db.conf
+init/systemd/man-db.service
 lib/.deps
 lib/getopt.h
 libdb/.deps
