@@ -18,11 +18,21 @@
 ## along with man-db; if not, write to the Free Software Foundation,
 ## Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
-EXTRA_DIST = man-db.conf.in
+EXTRA_DIST = \
+	man-db.conf.in \
+	man-db.service.in
 
-CLEANFILES = man-db.conf
+CLEANFILES = \
+	man-db.conf \
+	man-db.service
 
 nodist_systemdtmpfiles_DATA = man-db.conf
 
+systemdsystemunit_DATA = man-db.timer
+nodist_systemdsystemunit_DATA = man-db.service
+
 man-db.conf: man-db.conf.in
 	sed -e "s,[@]cache_top_owner[@],$(cache_top_owner),g" $< > $@
+
+man-db.service: man-db.service.in
+	sed -e "s,[@]bindir[@],$(bindir),g" $< > $@
