@@ -1,0 +1,16 @@
+[Unit]
+Description=Daily man-db regeneration
+Documentation=man:mandb(8)
+ConditionACPower=true
+
+[Service]
+Type=oneshot
+ExecStart=+/usr/bin/install -d -o man -g man -m 0755 /var/cache/man
+# Expunge old catman pages which have not been read in a week.
+ExecStart=/usr/bin/find /var/cache/man -type f -name *.gz -atime +6 -delete
+# Regenerate man database.
+ExecStart=@bindir@/mandb
+User=man
+Nice=19
+IOSchedulingClass=idle
+IOSchedulingPriority=7
