@@ -17,6 +17,11 @@ Major changes since man-db 2.8.4:
 
 	* Fix handling of \- in the right-hand side of a NAME section.
 
+	Improvements:
+	-------------
+
+	* Ship a systemd timer to perform daily database maintenance.
+
 man-db 2.8.4 (27 July 2018)
 ===========================
 
